Fixed inventory final4